hphp/hack/test/typecheck/classname/enum.php.like_types.exp
File "enum.php", line 9, characters 22-33:
Enums must be int or string, not a classname string or a dynamic value (Typing[4024])
